<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        tools:context="Fragments.Profile.SettingsFragment"
        android:background="?colorPrimary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvRestartApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:text="@string/restartApp"
                android:textColor="?textFillColor"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/swDarkMode"
                app:layout_constraintTop_toBottomOf="@+id/swDarkMode"
                app:layout_constraintVertical_bias="1.0" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swDarkMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/darkMode"
                android:textColor="?textFillColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivChangePFP" />

            <View
                android:id="@+id/colored_bar3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/very_light_grey"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/changePFP"
                android:textColor="?textFillColor"
                app:layout_constraintBottom_toBottomOf="@+id/ivChangePFP"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ivChangePFP" />

            <ImageView
                android:id="@+id/ivChangePFP"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/profileSettings"
                android:textColor="?textOutlineColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <View
                android:id="@+id/colored_bar4"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/very_light_grey"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swFriendable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/otherFriends"
                android:textColor="?textFillColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swShowFortunesFriends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/friendFortunes"
                android:textColor="?textFillColor"
                app:layout_constraintStart_toStartOf="@+id/swFriendable"
                app:layout_constraintTop_toBottomOf="@+id/swFriendable" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swShowFortunesUsers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/userFortunes"
                android:textColor="?textFillColor"
                app:layout_constraintStart_toStartOf="@+id/swFriendable"
                app:layout_constraintTop_toBottomOf="@+id/swShowFortunesFriends" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swShowMapFriends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/mapFriends"
                android:textColor="?textFillColor"
                app:layout_constraintStart_toStartOf="@+id/swFriendable"
                app:layout_constraintTop_toBottomOf="@+id/swShowFortunesUsers" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swShowMapUsers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/userFriends"
                android:textColor="?textFillColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/swFriendable"
                app:layout_constraintTop_toBottomOf="@+id/swShowMapFriends" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/otherSettings"
                android:textColor="?textOutlineColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/appSettings"
                android:textColor="?textOutlineColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swPushNotif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/pushNotif"
                android:textColor="?textFillColor"
                app:layout_constraintStart_toStartOf="@+id/swGenerateMode"
                app:layout_constraintTop_toBottomOf="@+id/swGenerateMode" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swGenerateMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/generateAI"
                android:textColor="?textFillColor"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <View
                android:id="@+id/colored_bar5"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/very_light_grey"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/locAccess"
                android:textColor="?textFillColor"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/swPushNotif" />

            <Button
                android:id="@+id/btnLocPerm"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="?colorSecondary"
                android:text="@string/givePerm"
                android:textColor="?textColorSearchUrl"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/swPushNotif"
                app:layout_goneMarginStart="10dp"
                tools:layout_marginStart="10dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btnDeleteAccount"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/darker_red"
            android:text="@string/deleteAcct"
            android:textColor="?textFillColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>