<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.Profile.ProfileSearchText"
    android:background="?attr/colorPrimary"
    >


    <android.widget.SearchView
        android:id="@+id/svProfileSearchText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:closeIcon="@drawable/close"
        android:goIcon="@drawable/go_icon"
        android:inputType="text"
        android:queryHint="Search friends by username"
        android:saveEnabled="true"
        android:searchIcon="@drawable/search"
        android:voiceIcon="@drawable/voice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProfileSearchText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/svProfileSearchText" >

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/tvNoResultsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noResultsProfile"
        android:textColor="?attr/textFillColor"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/rvProfileSearchText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/svProfileSearchText" />

    <TextView
        android:id="@+id/tvSearchTextPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/searchTextPrompt"
        android:textColor="?attr/textFillColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/rvProfileSearchText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rvProfileSearchText"
        app:layout_constraintTop_toTopOf="@+id/svProfileSearchText" />

    <ProgressBar
        android:id="@+id/pbProfileSearchText"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/svProfileSearchText" />

    <TextView
        android:id="@+id/tvNoAccessText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/noAccessProfile"
        android:textColor="?attr/textFillColor"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBlocked1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/blocked1"
        android:textColor="?attr/textFillColor"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBlocked2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/blocked2"
        android:textColor="?attr/textFillColor"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNotOnline_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offlineProfileSearch"
        android:textColor="?attr/textFillColor"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/svProfileSearchText" />

</androidx.constraintlayout.widget.ConstraintLayout>