<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivFriend_request"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <View
        android:id="@+id/colored_bar"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/light_grey"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivFriend_request" />

    <TextView
        android:id="@+id/tvFriendUsername_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="?textFillColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ivFriend_request"
        app:layout_constraintTop_toTopOf="@+id/ivFriend_request"
        tools:text="username" />

    <TextView
        android:id="@+id/tvNumForts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:textColor="?textFillColor"
        app:layout_constraintStart_toEndOf="@+id/ivFriend_request"
        app:layout_constraintTop_toBottomOf="@+id/tvFriendUsername_request"
        tools:text="@string/numForts" />

    <TextView
        android:id="@+id/tvFriendFortuneCt_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?textFillColor"
        app:layout_constraintBottom_toBottomOf="@+id/tvNumForts"
        app:layout_constraintStart_toEndOf="@+id/tvNumForts"
        app:layout_constraintTop_toTopOf="@+id/tvNumForts"
        tools:text="10" />

    <Button
        android:id="@+id/btnAcceptRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/black"
        android:text="@string/requestAccept"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/ivFriend_request"
        app:layout_constraintTop_toBottomOf="@+id/tvNumForts" />

    <Button
        android:id="@+id/btnDeclineRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/darker_red"
        android:text="@string/requestDecline"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/btnAcceptRequest"
        app:layout_constraintTop_toBottomOf="@+id/tvNumForts" />

    <Button
        android:id="@+id/btnRequestAccepted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/light_grey"
        android:text="@string/requestAccepted"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/ivFriend_request"
        app:layout_constraintTop_toBottomOf="@+id/tvNumForts" />

    <Button
        android:id="@+id/btnRequestDeclined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/light_grey"
        android:text="@string/requestDeclined"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/ivFriend_request"
        app:layout_constraintTop_toBottomOf="@+id/tvNumForts" />

</androidx.constraintlayout.widget.ConstraintLayout>