<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.Profile.ProfileSearchLoc"
    android:background="?attr/colorPrimary"
    >


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProfileSearchLoc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/tvNoResultsLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/textFillColor"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/rvProfileSearchLoc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2"
        tools:text="@string/noResultsProfile" />

    <TextView
        android:id="@+id/tvSearchLocPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="?attr/textFillColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/rvProfileSearchLoc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rvProfileSearchLoc"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2"
        tools:text="@string/searchLocPrompt" />

    <ProgressBar
        android:id="@+id/pbProfileSearchLoc"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/svProfileSearchLat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorTertiary"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textColor="?attr/textFillColor"
            android:textColorHint="?attr/textOutlineColor" />

        <EditText
            android:id="@+id/svProfileSearchLng"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorTertiary"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textColor="?attr/textFillColor"
            android:textColorHint="?attr/textOutlineColor" />

        <EditText
            android:id="@+id/svProfileSearchDist"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorTertiary"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textColor="?attr/textFillColor"
            android:textColorHint="?attr/textOutlineColor" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvNoAccessLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="?attr/textFillColor"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/noAccessProfile" />

    <TextView
        android:id="@+id/tvBlocked1_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="?attr/textFillColor"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/blocked1" />

    <TextView
        android:id="@+id/tvBlocked2_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="?attr/textFillColor"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/blocked2" />

    <TextView
        android:id="@+id/tvNotOnline_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/textFillColor"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/rvProfileSearchLoc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/offlineProfileSearch" />

</androidx.constraintlayout.widget.ConstraintLayout>